# KsanaVM-GCC

./: README
01-automake-learning/: configure  configure.in  configure.scan  hello.c
01-c-simple-compiling-under-linux/: CMakeLists.txt  a.out  hello.c
02-lesson01-compiling-test/: CMakeLists.txt  ksanavm.sln  ksanavm.vcproj  lesson.h  lesson1.c  lesson2.c  lesson3.c  lesson4.c  main.c  syllabus.txt  vm.c  vm.h
02-lesson01-compiling-test/srcs/: lesson1.c  lesson2.c  lesson3.c  lesson4.c  vm.c
perl/mod/: Compiler.pm  Ksanaword.pm  Vm.pm
perl/mod/t/: .Vm.pm.swp  .vm.t.swp  Vm.pm  fun_ref.t  ksanaword.t  lesson1.t  lesson2.t  lesson3.t  lesson4.t  main.t  vm.t
perl/ref/: .vm.c.swp  lesson2.c
